
idf_component_register(SRCS ../../unabto/src/modules/fingerprint_acl/fp_acl.c ../../unabto/src/modules/fingerprint_acl/fp_acl_ae.c ../../unabto/src/modules/fingerprint_acl/fp_acl_memory.c
                       INCLUDE_DIRS . ../unabto-esp-idf ../../unabto/src ../../unabto/src/modules/network/tcp/
                       REQUIRES )

